fixed wrapper overflow

--- a/mod3_project-frontend/assets/css/material-dashboard.css
+++ b/mod3_project-frontend/assets/css/material-dashboard.css
@@ -259,16 +259,17 @@ input[type=text]:placeholder {
 /*     brand Colors              */
 
 .modal-wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #00000150;
   z-index: 10;
+  overflow: hidden;
 }
 
 
